# srb2-retro

./: .gitignore  CMakeLists.txt  README.md  readme.md  srb2retro.desktop
.github/workflows/: emscripten.yml  macos.yml  ubuntu.yml  windows.yml
assets/: CMakeLists.txt
cmake/Modules/: FindSDL2.cmake  FindSDL2_main.cmake  FindSDL2_mixer.cmake  GitUtilities.cmake
src/: CMakeLists.txt  Makefile  Makefile.cfg  Sourcefile  comptime.c  config.h.in  console.c  console.h  d_clisrv.c  d_clisrv.h  d_main.c  d_main.h  d_net.c  d_netcmd.c  d_netfil.c  d_think.h  dehacked.c  doomdef.h  doomstat.h  doomtype.h  dstrings.c  f_finale.c  f_wipe.c  filesrch.c  filesrch.h  g_game.c  g_game.h  g_input.c  g_input.h  hu_stuff.c  i_system.h  i_tcp.c  i_video.h  info.c  info.h  m_anigif.c  m_menu.c  m_menu.h  m_misc.c  m_misc.h  (+37 more)
src/Makefile.d/: detect.mk  features.mk  nix.mk  platform.mk  sdl.mk  win32.mk
src/android/: i_system.c
src/dummy/: i_system.c
src/hardware/: Sourcefile  hw3dsdrv.h  hw_bsp.c  hw_cache.c  hw_data.h  hw_defs.h  hw_draw.c  hw_drv.h  hw_glob.h  hw_light.c  hw_light.h  hw_main.c  hw_main.h  hw_md2.c  hw_trick.c
src/hardware/r_opengl/: ogl_win.c  r_opengl.c  r_opengl.h
src/hardware/s_ds3d/: s_ds3d.c
src/sdl/: CMakeLists.txt  MakeNIX.cfg  Makefile.cfg  SDL_icon.xpm  Srb2SDL-vc10.vcxproj  hwsym_sdl.c  i_main.c  i_system.c  i_video.c  mixer_sound.c  ogl_sdl.c  sdl_sound.c
src/sdl/macosx/: Sourcefile  mac_alert.c
src/sdl2/: CMakeLists.txt  SDL_icon.xpm  dosstr.c  i_cdmus.c  i_main.c  i_main.h  i_net.c  i_sound.c  i_system.c  i_video.c  i_video.h  ogl_sdl.c
src/web/: CMakeLists.txt  index.html
src/win32/: CMakeLists.txt  win_main.c  win_sys.c
src/win32ce/: win_sys.c
